# mail-shell

./: .dockerignore  .gitignore  .oxfmtrc.jsonc  .oxlintignore  .oxlintrc.json  AGENTS.md  Cargo.toml  Dockerfile  README.md  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build-image.yml  deploy-worker.yml
client/: eslint.config.mjs  index.html  package.json  pwa-assets.config.ts  tsconfig.json  vite.config.test.ts  vite.config.ts
client/src/: App.test.tsx  App.tsx  index.css  main.tsx
client/src/api/: attachments.ts  client.ts  errors.ts  health.ts  index.ts  messages.ts  tags.ts  types.ts
client/src/api/core/: client.ts  config.ts  errors.ts  http-response-error.ts  network-request-error.ts  response-parse-error.ts  response.test.ts  response.ts
client/src/app/: app-shell.test.tsx  app-shell.tsx  routes.ts
client/src/app/screens/: archive-route.tsx  inbox-route.tsx  message-detail-actions.ts  message-detail-route.test.tsx  message-detail-route.tsx  not-found-route.tsx  tagged-inbox-route.tsx
client/src/components/: attachment-list.tsx  connectivity-banner.tsx  inbox-screen.test.tsx  inbox-screen.tsx  message-action-menu.test.tsx  message-action-menu.tsx  message-list-item.tsx  message-list-skeleton.tsx  message-list.tsx  pwa-update-modal.tsx  raw-headers-dialog.test.tsx  raw-headers-dialog.tsx  tag-nav.tsx
client/src/components/ui/: empty-state.tsx  error-banner.tsx  index.ts  pagination.tsx  search-input.tsx  skeleton.tsx  tag-chip.tsx
client/src/features/attachments/: api.test.ts  api.ts  queries.ts
client/src/features/health/: api.ts  queries.ts
client/src/features/messages/: api.ts  models.ts  (+1 more)
client/src/lib/: animations.ts  html-sanitize.test.ts  html-sanitize.ts  query-client.ts  time.ts
client/src/queries/: attachments.ts  health.ts  index.ts  messages.ts  tags.ts
client/src/test/: setup.ts
docs/: architecture.md  client-api-design.md  client-pwa.md  code-quality.md  deployment-and-ci.md  implementation-roadmap.md  tech-stack.md
scripts/: generate-client-api.mjs
server/: Cargo.toml
server/migrations/: 0001_initial.sql  0002_message_mailbox.sql
server/src/: api_docs.rs  db.rs  error.rs  lib.rs  main.rs  mime_parser.rs  models.rs  storage.rs
server/src/repository/: mod.rs  sqlx.rs
server/src/routes/: api_docs.rs  attachments.rs  health.rs  inbound.rs  messages.rs  mod.rs  tags.rs
server/src/services/: bark.rs  inbound.rs  mod.rs  notifier.rs
server/src/sql/: migrate.sql
server/tests/: api.rs  repository_refactor.rs
worker/: package.json  tsconfig.json  wrangler.jsonc
worker/src/: index.ts
(+7 files in other folders)
