[package]
name = "mail-shell-server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8.6", features = ["multipart"] }
chrono = { version = "0.4.41", features = ["serde"] }
mailparse = "0.16.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8.6", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "chrono", "derive", "macros", "migrate"] }
thiserror = "2.0.12"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "fs"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "trace", "set-header"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
utoipa = { version = "5.5.0", features = ["chrono", "uuid"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }

[dev-dependencies]
http-body-util = "0.1.3"
mockito = "1"
reqwest = { version = "0.12", features = ["multipart"] }
tempfile = "3.20.0"
